--- a/analyze_results.ipynb
+++ b/analyze_results.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "cell-4",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cell-6",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,15 @@
       "clustered   -0.00  45.27  77.83       78.39\n",
       "grid         0.00   0.03   0.05        0.05\n",
       "hub_spoke    0.00   9.94  15.90       16.17\n",
-      "random       0.09  12.64  19.64       21.07\n"
+      "random       0.09  12.64  19.64       21.07\n",
+      "\n",
+      "Variance of Integrality Gap (%) by Structure and Formulation (n=15):\n",
+      "formulation     DFJ      GG     MTZ  Assignment\n",
+      "structure                                      \n",
+      "clustered    0.0000  8.6382  4.6206      4.4918\n",
+      "grid         0.0012  0.0201  0.0235      0.0266\n",
+      "hub_spoke    0.0000  1.0154  1.3738      1.4180\n",
+      "random       0.2165  5.0916  5.7723      5.9953\n"
      ]
     }
    ],
@@ -146,9 +154,9 @@
     "for name, df in formulations.items():\n",
     "    df_n15 = df[df['n'] == 15]\n",
     "    summary = df_n15.groupby('structure').agg({\n",
-    "        'gap_percent': ['mean', 'std', 'min', 'max']\n",
+    "        'gap_percent': ['mean', 'std', 'var', 'min', 'max']\n",
     "    }).round(4)\n",
-    "    summary.columns = ['mean', 'std', 'min', 'max']\n",
+    "    summary.columns = ['mean', 'std', 'var', 'min', 'max']\n",
     "    summary['formulation'] = name\n",
     "    summary = summary.reset_index()\n",
     "    summary_list.append(summary)\n",
@@ -158,7 +166,15 @@
     "all_summary_pivot = all_summary_pivot[['DFJ', 'GG', 'MTZ', 'Assignment']]\n",
     "\n",
     "print(\"Mean Integrality Gap (%) by Structure and Formulation (n=15):\")\n",
-    "print(all_summary_pivot.round(2))"
+    "print(all_summary_pivot.round(2))\n",
+    "\n",
+    "\n",
+    "# Print variance for additional insights\n",
+    "variance_pivot = all_summary.pivot(index='structure', columns='formulation', values='std')\n",
+    "variance_pivot = variance_pivot[['DFJ', 'GG', 'MTZ', 'Assignment']]\n",
+    "\n",
+    "print(\"\\nStandard Deviation of Integrality Gap (%) by Structure and Formulation (n=15):\")\n",
+    "print(variance_pivot.round(4))"
    ]
   },
   {
@@ -639,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "cell-19",
    "metadata": {},
    "outputs": [
